fixes docs
